[package]
name = "pmw3901"
version = "1.0.0"
authors = ["Ken Elkabany <ken@elkabany.com>"]
license = "MIT"
description = "Library for the PMW3901 optical flow sensor."
repository = "https://github.com/braincore/pmw3901-rs"
keywords = ["pmw3901"]
readme = "README.md"

[dependencies]
byteorder = "1.1.0"
spidev = "0.3.0"

[[example]]
name = "scan"
crate-type = ["bin"]
