[package]
name = "pmw3901"
version = "1.0.0"
authors = ["Ken Elkabany <ken@elkabany.com>"]
license = "MIT"
description = "Library for the PMW3901 optical flow sensor."
repository = "https://github.com/braincore/pmw3901-rs"
keywords = ["pmw3901"]
readme = "README.md"

edition = "2021"

[dependencies]
byteorder = "1.4.3"
spidev = "0.5.1"

[[example]]
name = "scan"
crate-type = ["bin"]
